[tool.poetry]
name = "vercel_blob"
version = "0.2.5"
description = "A Python Wrapper for Vercel Blob Storage API"
authors = ["SuryaSekhar14 <suryasekhardatta22@gmail.com>"]
readme = "README.md"
repository = "https://github.com/SuryaSekhar14/vercel_blob"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
